classDiagram
direction LR

%% ==================== FRONTEND ====================

class FrontendController["NotificationController"] {
    <<frontend controller>>
    - _client : HttpClient
    + Index() Task~IActionResult~
    + GetListTiny() Task~IActionResult~
    + Admin() IActionResult
}

class NotificationViewModel {
    <<view model>>
    + NotificationId : int
    + ReceiverId : int
    + ReceiverFullName : string?
    + ReceiverEmail : string?
    + Title : string
    + Content : string
    + LinkAction : string?
    + IsRead : bool
    + CreatedAt : DateTime?
    + ReceiverRole : string?
    + SenderId : int?
    + SenderRole : string?
}

%% ==================== BACKEND - CONTROLLER ====================

class BackendController["NotificationController"] {
    <<backend controller>>
    - _notiService : INotificationService
    + Delete(id: int) Task~IActionResult~
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class Notification {
    <<entity>>
    + NotificationId : int
    + SenderId : int?
    + ReceiverId : int?
    + Title : string?
    + Content : string?
    + LinkAction : string?
    + IsRead : bool?
    + IsRemoved : bool?
    + CreatedAt : DateTime?
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class INotificationService {
    <<service interface>>
    + DeleteNotificationAsync(notiId: int, userId: int) Task~bool~ *
}

%% ==================== BACKEND - REPOSITORY INTERFACES ====================

class INotificationRepository {
    <<repository interface>>
    + GetByIdAsync(id: int) Task~Notification?~ *
    + Delete(notification: Notification) void *
    + SaveChangesAsync() Task~int~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class NotificationService {
    <<service>>
    - _repo : INotificationRepository
    - _hubContext : IHubContext~NotificationHub~
    + DeleteNotificationAsync(notiId: int, userId: int) Task~bool~
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class NotificationRepository {
    <<repository>>
    - _context : AppDbContext
    + GetByIdAsync(id: int) Task~Notification?~
    + Delete(notification: Notification) void
    + SaveChangesAsync() Task~int~
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    <<dbcontext>>
    + Notifications : DbSet~Notification~
    + SaveChangesAsync(cancellationToken: CancellationToken) Task~int~
}

%% ==================== BACKEND - HUBS ====================

class NotificationHub {
    <<hub>>
    + SendAsync(method: string) Task
}

%% ==================== RELATIONSHIPS ====================

%% === UNIDIRECTIONAL ASSOCIATION ===
BackendController --> INotificationService
NotificationService --> INotificationRepository
NotificationRepository --> AppDbContext
NotificationService --> NotificationHub

%% === INTERFACE REALIZATION ===
NotificationService ..|> INotificationService
NotificationRepository ..|> INotificationRepository

%% === DEPENDENCY ===
FrontendController ..> BackendController
FrontendController ..> NotificationViewModel
NotificationRepository ..> Notification

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
